# colorprinter

./: README.md  __init__.py  color_printer.py  colorprinter.py  colorprinter.toml  printpop.py  printpop.toml  pyproject.toml  setup.cfg  setup.py  test.py
ColorPrinter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
PrintPop.egg-info/: PKG-INFO  entry_points.txt
printpop/: __init__.py  color_printer.py  core.py  printpop.py
printpop.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
