[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["printpop"]

[project]
name = "printpop"
version = "0.1.9"
dependencies = []

requires-python = ">=3.8"
authors = [
  {name = "Ryan LaPine", email = "github.stunt845@passinbox.com"}
]
maintainers = [
  {name = "Ryan LaPine", email = "github.stunt845@passinbox.com"}
]
description = "Styled console printing made simple — color, format, and clarity in one package."
readme = "README.md"
license = { text = "MIT" }
license-files = ["LICENCSE.*"]
keywords = ["console", "printing", "color", "formatting", "CLI", "logging"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/rlapine/PrintPop"
Documentation = "https://github.com/rlapine/PrintPop/README.md"
Repository = "https://github.com/rlapine/PrintPop"

[project.scripts]
printpop = "printpop.core:main"
